# nerfstudio-xray

./: README.md  pyproject.toml
method_template/: objects.py  parser_config.py  template_config.py  template_datamanager.py  template_dataparser.py  template_field.py  template_model.py  template_pipeline.py
nerf-bspline/: pyproject.toml
nerf-bspline/nerf_bspline/: bsplinefield.py  deformation_fields.py  objects.py  parser_config.py  plot_deformation_field.py  template_config.py  template_dataloaders.py  template_datamanager.py  template_dataparser.py  template_dataset.py  template_field.py  template_model.py  template_pipeline.py  test_vectorized_displacement.py  xray_renderer.py
nerf-xray/: pyproject.toml
nerf-xray/nerf_xray/: canonical_pipeline.py  combine_forward_backward_checkpoints.py  def_field_vis.py  deformation_fields.py  field_mixers.py  mixing_config.py  multi_camera_dataparser.py  objects.py  parser_config.py  refine_bspline_field.ipynb  refine_field.py  refine_twofield.py  refine_vfield.py  remove_camera_optimizer.py  smstep_mixing_config.py  spatiotemporal_mix_config.py  template_config.py  template_datamanager.py  template_dataparser.py  template_field.py  template_model.py  template_pipeline.py  twofield_config.py  twofield_model.py  twofield_pipeline.py  vfield_config.py  vfield_model.py  vfield_pipeline.py  xray_datamanager.py  xray_dataparser.py  xray_def_config.py  xray_renderer.py  xray_temporal_dataloaders.py  xray_temporal_datamanager.py
