[project]
name = "nerf-xray"
description = "Nerfstudio method for X-ray reconstruction"
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["nerf_xray*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
nerf_xray = 'nerf_xray.template_config:nerf_xray'
nerf_def_xray = 'nerf_xray.xray_def_config:nerf_def_xray'
xray_twofield = 'nerf_xray.twofield_config:xray_twofield'
xray_vfield = 'nerf_xray.vfield_config:xray_vfield'
mixing_vfield = 'nerf_xray.mixing_config:mixing_vfield'
spatiotemporal_mix = 'nerf_xray.spatiotemporal_mix_config:spatiotemporal_mix'
smoothstep_mixing = 'nerf_xray.smstep_mixing_config:smoothstep_mixing'
[project.entry-points.'nerfstudio.dataparser_configs']
xray-dataparser = 'nerf_xray.parser_config:XrayDataparser'